--- a/DSTB_057.yaml
+++ b/DSTB_057.yaml
@@ -1,87 +1,100 @@
 proxies:
-- name: EkaLipDo2_Live_IP1
+- name: ServerAkamai_Live_IP1
   type: trojan
   server: 104.17.224.203
   port: 443
-  password: 6fde1100-fd9f-4fae-bbe5-0e1020863871
+  password: 557f9453-ce14-4568-9215-b3a20dbb1d92
   udp: true
-  sni: dstb.cloud
+  sni: id.dstb.cloud
   skip-cert-verify: true
   network: ws
   ws-opts:
     path: /trojan-ws
     headers:
-      Host: dstb.cloud
-- name: EkaLipDo2_Live_IP2
+      Host: id.dstb.cloud
+- name: ServerAkamai_Live_IP2
   type: trojan
   server: 104.16.143.190
   port: 443
-  password: 6fde1100-fd9f-4fae-bbe5-0e1020863871
+  password: 557f9453-ce14-4568-9215-b3a20dbb1d92
   udp: true
-  sni: dstb.cloud
+  sni: id.dstb.cloud
   skip-cert-verify: true
   network: ws
   ws-opts:
     path: /trojan-ws
     headers:
-      Host: dstb.cloud
-- name: EkaLipDo2_Live_IP3
+      Host: id.dstb.cloud
+- name: ServerAkamai_Live_IP3
   type: trojan
   server: 172.67.75.37
   port: 443
-  password: 6fde1100-fd9f-4fae-bbe5-0e1020863871
+  password: 557f9453-ce14-4568-9215-b3a20dbb1d92
   udp: true
-  sni: dstb.cloud
+  sni: id.dstb.cloud
   skip-cert-verify: true
   network: ws
   ws-opts:
     path: /trojan-ws
     headers:
-      Host: dstb.cloud
-- name: EkaLipDo2_Live_IP4
+      Host: id.dstb.cloud
+- name: ServerAkamai_Live_IP4
   type: trojan
   server: 104.26.15.208
   port: 443
-  password: 6fde1100-fd9f-4fae-bbe5-0e1020863871
+  password: 557f9453-ce14-4568-9215-b3a20dbb1d92
   udp: true
-  sni: dstb.cloud
+  sni: id.dstb.cloud
   skip-cert-verify: true
   network: ws
   ws-opts:
     path: /trojan-ws
     headers:
-      Host: dstb.cloud
-- name: EkaLipDo2_Live_IP5
+      Host: id.dstb.cloud
+- name: ServerAkamai_Live_IP5
   type: trojan
   server: 104.26.14.208
   port: 443
-  password: 6fde1100-fd9f-4fae-bbe5-0e1020863871
+  password: 557f9453-ce14-4568-9215-b3a20dbb1d92
   udp: true
-  sni: dstb.cloud
+  sni: id.dstb.cloud
   skip-cert-verify: true
   network: ws
   ws-opts:
     path: /trojan-ws
     headers:
-      Host: dstb.cloud
-- name: EkaLipDo2_Live_H1
+      Host: id.dstb.cloud
+- name: ServerAkamai_Live_H1
   type: trojan
   server: circles.asia
   port: 443
-  password: 6fde1100-fd9f-4fae-bbe5-0e1020863871
+  password: 557f9453-ce14-4568-9215-b3a20dbb1d92
   udp: true
-  sni: dstb.cloud
+  sni: id.dstb.cloud
   skip-cert-verify: true
   network: ws
   ws-opts:
     path: /trojan-ws
     headers:
-      Host: dstb.cloud
-- name: EkaLipDo2_Live_H2
+      Host: id.dstb.cloud
+- name: ServerAkamai_Live_H2
   type: trojan
   server: beacon.liveon.id
   port: 443
-  password: 6fde1100-fd9f-4fae-bbe5-0e1020863871
+  password: 557f9453-ce14-4568-9215-b3a20dbb1d92
+  udp: true
+  sni: id.dstb.cloud
+  skip-cert-verify: true
+  network: ws
+  ws-opts:
+    path: /trojan-ws
+    headers:
+      Host: id.dstb.cloud
+- name: SeverDo2_Live_IP1
+  type: trojan
+  server: 104.17.224.203
+  port: 443
+  password: 1cd070a9-b27d-4be2-80f7-4c3456b1b507
   udp: true
   sni: dstb.cloud
   skip-cert-verify: true
@@ -90,50 +103,89 @@ proxies:
     path: /trojan-ws
     headers:
       Host: dstb.cloud
-- name: EkaLipNusa_Live_IP1
-  type: trojan
-  server: 104.17.224.203
-  port: 443
-  password: f776dc10-2f9c-4686-b065-d10ba3521596
-  udp: true
-  sni: nusa.dstb.cloud
-  skip-cert-verify: true
-  network: ws
-  ws-opts:
-    path: /trojan-ws
-    headers:
-      Host: nusa.dstb.cloud
-- name: EkaLipNusa_Live_IP2
+- name: SeverDo2_Live_IP2
   type: trojan
   server: 104.16.143.190
   port: 443
-  password: f776dc10-2f9c-4686-b065-d10ba3521596
+  password: 1cd070a9-b27d-4be2-80f7-4c3456b1b507
   udp: true
-  sni: nusa.dstb.cloud
+  sni: dstb.cloud
   skip-cert-verify: true
   network: ws
   ws-opts:
     path: /trojan-ws
     headers:
-      Host: nusa.dstb.cloud
-- name: EkaLipNusa_Live_IP3
+      Host: dstb.cloud
+- name: SeverDo2_Live_IP3
   type: trojan
   server: 172.67.75.37
   port: 443
-  password: f776dc10-2f9c-4686-b065-d10ba3521596
+  password: 1cd070a9-b27d-4be2-80f7-4c3456b1b507
   udp: true
-  sni: nusa.dstb.cloud
+  sni: dstb.cloud
   skip-cert-verify: true
   network: ws
   ws-opts:
     path: /trojan-ws
     headers:
-      Host: nusa.dstb.cloud
-- name: EkaLipNusa_Live_IP4
+      Host: dstb.cloud
+- name: SeverDo2_Live_IP4
   type: trojan
   server: 104.26.15.208
   port: 443
-  password: f776dc10-2f9c-4686-b065-d10ba3521596
+  password: 1cd070a9-b27d-4be2-80f7-4c3456b1b507
+  udp: true
+  sni: dstb.cloud
+  skip-cert-verify: true
+  network: ws
+  ws-opts:
+    path: /trojan-ws
+    headers:
+      Host: dstb.cloud
+- name: SeverDo2_Live_IP5
+  type: trojan
+  server: 104.26.14.208
+  port: 443
+  password: 1cd070a9-b27d-4be2-80f7-4c3456b1b507
+  udp: true
+  sni: dstb.cloud
+  skip-cert-verify: true
+  network: ws
+  ws-opts:
+    path: /trojan-ws
+    headers:
+      Host: dstb.cloud
+- name: SeverDo2_Live_H1
+  type: trojan
+  server: circles.asia
+  port: 443
+  password: 1cd070a9-b27d-4be2-80f7-4c3456b1b507
+  udp: true
+  sni: dstb.cloud
+  skip-cert-verify: true
+  network: ws
+  ws-opts:
+    path: /trojan-ws
+    headers:
+      Host: dstb.cloud
+- name: SeverDo2_Live_H2
+  type: trojan
+  server: beacon.liveon.id
+  port: 443
+  password: 1cd070a9-b27d-4be2-80f7-4c3456b1b507
+  udp: true
+  sni: dstb.cloud
+  skip-cert-verify: true
+  network: ws
+  ws-opts:
+    path: /trojan-ws
+    headers:
+      Host: dstb.cloud
+- name: ServerNusa_Live_IP1
+  type: trojan
+  server: 104.17.224.203
+  port: 443
+  password: 63780723-758c-4456-bc8e-13795525fb8a
   udp: true
   sni: nusa.dstb.cloud
   skip-cert-verify: true
@@ -142,11 +194,76 @@ proxies:
     path: /trojan-ws
     headers:
       Host: nusa.dstb.cloud
-- name: EkaLipNusa_Live_IP5
+- name: ServerNusa_Live_IP2
+  type: trojan
+  server: 104.16.143.190
+  port: 443
+  password: 63780723-758c-4456-bc8e-13795525fb8a
+  udp: true
+  sni: nusa.dstb.cloud
+  skip-cert-verify: true
+  network: ws
+  ws-opts:
+    path: /trojan-ws
+    headers:
+      Host: nusa.dstb.cloud
+- name: ServerNusa_Live_IP3
+  type: trojan
+  server: 172.67.75.37
+  port: 443
+  password: 63780723-758c-4456-bc8e-13795525fb8a
+  udp: true
+  sni: nusa.dstb.cloud
+  skip-cert-verify: true
+  network: ws
+  ws-opts:
+    path: /trojan-ws
+    headers:
+      Host: nusa.dstb.cloud
+- name: ServerNusa_Live_IP4
+  type: trojan
+  server: 104.26.15.208
+  port: 443
+  password: 63780723-758c-4456-bc8e-13795525fb8a
+  udp: true
+  sni: nusa.dstb.cloud
+  skip-cert-verify: true
+  network: ws
+  ws-opts:
+    path: /trojan-ws
+    headers:
+      Host: nusa.dstb.cloud
+- name: ServerNusa_Live_IP5
   type: trojan
   server: 104.26.14.208
   port: 443
-  password: f776dc10-2f9c-4686-b065-d10ba3521596
+  password: 63780723-758c-4456-bc8e-13795525fb8a
+  udp: true
+  sni: nusa.dstb.cloud
+  skip-cert-verify: true
+  network: ws
+  ws-opts:
+    path: /trojan-ws
+    headers:
+      Host: nusa.dstb.cloud
+- name: ServerNusa_Live_H1
+  type: trojan
+  server: circles.asia
+  port: 443
+  password: 63780723-758c-4456-bc8e-13795525fb8a
+  udp: true
+  sni: nusa.dstb.cloud
+  skip-cert-verify: true
+  network: ws
+  ws-opts:
+    path: /trojan-ws
+    headers:
+      Host: nusa.dstb.cloud
+- name: ServerNusa_Live_H2
+  type: trojan
+  server: beacon.liveon.id
+  port: 443
+  password: 63780723-758c-4456-bc8e-13795525fb8a
   udp: true
   sni: nusa.dstb.cloud
   skip-cert-verify: true
